--- a/templates/bootstrap-pages/site-template.html
+++ b/templates/bootstrap-pages/site-template.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+   <link rel="stylesheet"
+         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+         crossorigin="anonymous">
     <!-- ==============================
     [ Template CSS ] -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/form-template.css') }}">
@@ -16,12 +17,16 @@
     <!-- ===Favicon Link===-->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    <title> Kawe - {{ title }}</title>
+    <title> Kawe - {{ request.endpoint.capitalize() }}</title>
+
+    <style>
+
+    </style>
 </head>
 <body>
     <!-- ==============================
     [ This part is the top part of the page.] -->
-    {% set links = ['home', 'search', 'logout'] %}
+    {% set links = ['home', 'logout'] %}
     <nav class="navbar navbar-expand navbar-dark bg-dark">
         <a href="{{ url_for('home') }}" class="navbar-brand ml-3 mt-3">
             <img src="{{ url_for('static', filename='images/sblogo-full.svg') }}" alt="Social Books
@@ -36,6 +41,11 @@
                     </a>
                 {% endfor %}
             </div>
+            <form action="{{ url_for('search') }}" class="form-inline" method="get">
+                {{ searchform.hidden_tag() }}
+                {{ searchform.searchbox(placeholder=searchform.searchbox.label.text, class_="form-control mr-sm-2") }}
+                {{ searchform.submit(class_="btn my-2 my-sm-0", id="submit-button") }}
+            </form>
         </div>
     </nav>
 
